--- a/docs/source/layouts/_header.erb
+++ b/docs/source/layouts/_header.erb
@@ -1,5 +1,5 @@
 <header class="docs-header">
-<a class="docs-brand" href="/">Plate</a>
+<a class="docs-brand" href="/">&lt;plate&gt;</a>
   <ul class="docs-nav-main">
     <li><a href="#">Settings</a></li>
     <li>
