--- a/assets/stylesheets/src/settings/settings.scss
+++ b/assets/stylesheets/src/settings/settings.scss
@@ -32,10 +32,12 @@
 @import "main";
 
 // Mixins
+@import "mixins/breakpoint";
 @import "mixins/debug";
 @import "mixins/font-feature-settings";
 @import "mixins/font-size";
 @import "mixins/font-smoothing";
+@import "mixins/grid";
 @import "mixins/headings";
 @import "mixins/hyphens";
 @import "mixins/img-responsive";
