--- a/assets/stylesheets/src/base/_buttons.scss
+++ b/assets/stylesheets/src/base/_buttons.scss
@@ -37,10 +37,10 @@ $button-link-disabled-color:       $gray-light !default;
 // Mixins
 // ----------------------------------------------------------------------------
 
-@mixin button-size($padding-vert, $padding-horiz, $font-size, $line-height, $border-radius) {
+@mixin button-size($padding-vert, $padding-horiz, $font-size, $line-height-base, $border-radius) {
   border-radius: $border-radius;
   font-size: $font-size;
-  line-height: $line-height;
+  line-height: $line-height-base;
   padding: $padding-vert $padding-horiz;
 }
 
@@ -77,7 +77,7 @@ $button-link-disabled-color:       $gray-light !default;
 // ----------------------------------------------------------------------------
 
 .button {
-  @include button-size($padding-vert-base, $padding-horiz-base, $font-size-base, $line-height, $border-radius-base);
+  @include button-size($padding-vert-base, $padding-horiz-base, $font-size-base, $line-height-base, $border-radius-base);
   @include user-select(none);
   background-image: none;
   border: $button-border-width solid transparent;
@@ -134,9 +134,9 @@ $button-link-disabled-color:       $gray-light !default;
 
 // line-height: ensure even-numbered height of button next to large input
 
-.button-lg { @include button-size($padding-vert-lg, $padding-horiz-lg, $font-size-lg, $line-height-lg, $border-radius-lg); }
-.button-sm { @include button-size($padding-vert-sm, $padding-horiz-sm, $font-size-sm, $line-height-sm, $border-radius-sm); }
-.button-xs { @include button-size($padding-vert-xs, $padding-horiz-xs, $font-size-sm, $line-height-sm, $border-radius-sm); }
+.button-lg { @include button-size($padding-vert-lg, $padding-horiz-lg, $font-size-lg, $line-height-base-lg, $border-radius-lg); }
+.button-sm { @include button-size($padding-vert-sm, $padding-horiz-sm, $font-size-sm, $line-height-base-sm, $border-radius-sm); }
+.button-xs { @include button-size($padding-vert-xs, $padding-horiz-xs, $font-size-sm, $line-height-base-sm, $border-radius-sm); }
 
 // Block button
 // ----------------------------------------------------------------------------
