--- a/assets/stylesheets/src/base/_code.scss
+++ b/assets/stylesheets/src/base/_code.scss
@@ -34,7 +34,7 @@ pre {
   display: block;
   padding: (($leading - 1) / 2);
   margin: 0 0 ($leading / 2);
-  line-height: $line-height;
+  line-height: $line-height-base;
   word-break: break-all;
   word-wrap: break-word;
   color: $gray-dark;
