--- a/assets/stylesheets/src/base/_images.scss
+++ b/assets/stylesheets/src/base/_images.scss
@@ -34,7 +34,7 @@ figure {
   background-color: $body-bg;
   border-radius: $border-radius-base;
   border: 1px solid $border-color-base;
-  line-height: $line-height;
+  line-height: $line-height-base;
   padding: 4px;
 
   // Keep them at most 100% wide
