--- a/assets/stylesheets/src/base/_misc.scss
+++ b/assets/stylesheets/src/base/_misc.scss
@@ -8,7 +8,7 @@
 address {
   @include margin-bottom(1);
   font-style: normal;
-  line-height: $line-height;
+  line-height: $line-height-base;
 }
 
 // Horizontal rules
