--- a/assets/stylesheets/src/base/_tables.scss
+++ b/assets/stylesheets/src/base/_tables.scss
@@ -1,3 +1,44 @@
 // ============================================================================
 // Tables
 // ============================================================================
+
+// Variables
+// ----------------------------------------------------------------------------
+
+$table-bg:                      transparent !default;
+$table-bg-accent:               $gray-lighter !default;
+$table-bg-hover:                darken($gray-lighter, 15%) !default;
+$table-bg-active:               $table-bg-hover !default;
+
+$table-border-color:            $gray-light !default;
+$table-cell-padding:            8px !default;
+
+// Base styles
+// ----------------------------------------------------------------------------
+
+table {
+  background-color: $table-bg;
+  border-collapse: collapse;
+  border-spacing: 0;
+  empty-cells: show;
+}
+
+.table {
+  margin-bottom: $leading;
+  width: 100%;
+
+  // Cells
+  > thead,
+  > tbody,
+  > tfoot {
+    > tr {
+      > th,
+      > td {
+        border-top: 1px solid $table-border-color;
+        line-height: $line-height-base;
+        padding: $table-cell-padding;
+        vertical-align: top;
+      }
+    }
+  }
+}
