--- a/assets/stylesheets/src/settings/_type.scss
+++ b/assets/stylesheets/src/settings/_type.scss
@@ -31,8 +31,8 @@ $font-size-small:       15px !default;
 $font-size-smaller:     13px !default;
 
 // Line height
-$line-height:           1.6 !default;
-$leading:               $font-size-base * $line-height !default;
+$line-height-base:      1.6 !default;
+$leading:               $font-size-base * $line-height-base !default;
 $round-to-half-line:    true !default; // used for the vertical baseline grid
 
 // Colors
