--- a/assets/stylesheets/src/base/_buttons.scss
+++ b/assets/stylesheets/src/base/_buttons.scss
@@ -134,9 +134,9 @@ $button-link-disabled-color:       $gray-light !default;
 
 // line-height: ensure even-numbered height of button next to large input
 
-.button-lg { @include button-size($padding-vert-lg, $padding-horiz-lg, $font-size-lg, $line-height-base-lg, $border-radius-lg); }
-.button-sm { @include button-size($padding-vert-sm, $padding-horiz-sm, $font-size-sm, $line-height-base-sm, $border-radius-sm); }
-.button-xs { @include button-size($padding-vert-xs, $padding-horiz-xs, $font-size-sm, $line-height-base-sm, $border-radius-sm); }
+.button-lg { @include button-size($padding-vert-lg, $padding-horiz-lg, $font-size-lg, $line-height-lg, $border-radius-lg); }
+.button-sm { @include button-size($padding-vert-sm, $padding-horiz-sm, $font-size-sm, $line-height-sm, $border-radius-sm); }
+.button-xs { @include button-size($padding-vert-xs, $padding-horiz-xs, $font-size-sm, $line-height-sm, $border-radius-sm); }
 
 // Block button
 // ----------------------------------------------------------------------------
