--- a/assets/stylesheets/src/settings/settings.scss
+++ b/assets/stylesheets/src/settings/settings.scss
@@ -21,6 +21,7 @@
 @import "functions/min-lines-for";
 @import "functions/relative-unit";
 @import "functions/strip-unit";
+@import "functions/type-scale";
 
 // Variables
 @import "breakpoints";
