--- a/assets/stylesheets/src/base/_forms.scss
+++ b/assets/stylesheets/src/base/_forms.scss
@@ -167,6 +167,7 @@ input[type="checkbox"], {
 // Layouts
 // ----------------------------------------------------------------------------
 
+// Inline form
 .form-inline {
   .control {
     display: inline-block;
@@ -202,6 +203,7 @@ input[type="checkbox"], {
   }
 }
 
+// Grouped form
 .form-grouped {
   .control {
     border-radius: 0;
