--- a/assets/stylesheets/src/base/_headings.scss
+++ b/assets/stylesheets/src/base/_headings.scss
@@ -11,9 +11,9 @@ h1, h2, h3, h4, h5, h6 {
   text-rendering: optimizeLegibility;
 }
 
-h1 { @include font-size($font-size-h1); }
-h2 { @include font-size($font-size-h2); }
-h3 { @include font-size($font-size-h3); }
-h4 { @include font-size($font-size-h4); }
-h5 { @include font-size($font-size-h5); }
-h6 { @include font-size($font-size-h6); }
+h1 { @include font-size($font-size-xxl); }
+h2 { @include font-size($font-size-xl); }
+h3 { @include font-size($font-size-lg); }
+h4 { @include font-size($font-size-md); }
+h5 { @include font-size($font-size-base); }
+h6 { @include font-size($font-size-sm); }
