--- a/assets/stylesheets/src/base/_paragraphs.scss
+++ b/assets/stylesheets/src/base/_paragraphs.scss
@@ -30,7 +30,7 @@ p {
 
 // Larger text for leading paragraphs
 .lead {
-  @include font-size($font-size-lg);
+  @include font-size($font-size-md);
 }
 
 .text-inline {
