--- a/assets/stylesheets/src/settings/_type.scss
+++ b/assets/stylesheets/src/settings/_type.scss
@@ -12,26 +12,22 @@ $font-family-base:      $sans !default;
 $font-size-root:        16px !default;
 $font-size-base:        1rem !default;
 
-$font-size-lg:          modular-scale($font-size-base,  1, 1.25) !default;
-$font-size-sm:          modular-scale($font-size-base, -1, 1.25) !default;
-$font-size-h1:          modular-scale($font-size-base,  5, 1.25) !default;
-$font-size-h2:          modular-scale($font-size-base,  4, 1.25) !default;
-$font-size-h3:          modular-scale($font-size-base,  3, 1.25) !default;
-$font-size-h4:          modular-scale($font-size-base,  2, 1.25) !default;
-$font-size-h5:          modular-scale($font-size-base,  1, 1.25) !default;
-$font-size-h6:          modular-scale($font-size-base,  0, 1.25) !default;
+// Sizing with a modular scale
+$type-scale-ratio:      $perfect-fourth !default;
+$type-scale-strands:    $font-size-base;
 
-// Seven abstracted sizes
-$font-size-huge:        60px !default;
-$font-size-larger:      42px !default;
-$font-size-large:       32px !default;
-$font-size-medium:      21px !default;
-$font-size-regular:     $font-size-base !default;
-$font-size-small:       15px !default;
-$font-size-smaller:     13px !default;
+$font-size-xxl:         type-scale(4) !default;
+$font-size-xl:          type-scale(3) !default;
+$font-size-lg:          type-scale(2) !default;
+$font-size-md:          type-scale(1) !default;
+$font-size-sm:          type-scale(-1) !default;
+$font-size-xs:          type-scale(-2) !default;
 
 // Line height
-$line-height-base:      1.6 !default;
+$line-height-base:      1.618 !default;
+$line-height-lg:        1.33 !default;
+$line-height-sm:        1.5 !default;
+
 $leading:               $font-size-base * $line-height-base !default;
 $round-to-half-line:    true !default; // used for the vertical baseline grid
 
@@ -50,6 +46,6 @@ $font-weight-medium:    500 !default;
 $font-weight-bold:      700 !default;
 $font-weight-black:     900 !default;
 
-// Options
+// Type options
 $indented-paragraphs:   false !default;
 $caps-spacing:          0.1em;
