--- a/assets/stylesheets/src/settings/mixins/_font-size.scss
+++ b/assets/stylesheets/src/settings/mixins/_font-size.scss
@@ -7,8 +7,8 @@
 // although you can pass in a custom number of lines if you like.
 // $font-size must be in px.
 
-// @include font-size($font-size-h1);
-// @include font-size($font-size-h2, 3); (line-height will take up 3 units)
+// @include font-size($font-size-large);
+// @include font-size($font-size-small, 3); (line-height will take up 3 units)
 
 @mixin font-size($font-size, $lines: min-lines-for($font-size)) {
   font-size: $font-size;
