--- a/assets/stylesheets/src/base/_tables.scss
+++ b/assets/stylesheets/src/base/_tables.scss
@@ -10,7 +10,7 @@ $table-bg-accent:               $gray-lighter !default;
 $table-bg-hover:                darken($gray-lighter, 15%) !default;
 $table-bg-active:               $table-bg-hover !default;
 
-$table-border-color:            $gray-light !default;
+$table-border-color:            $gray-lighter !default;
 $table-cell-padding:            8px !default;
 
 // Base styles
