--- a/docs/source/index.html.erb
+++ b/docs/source/index.html.erb
@@ -1,3 +1,58 @@
 ---
 title: Plate
 ---
+
+# Colors
+
+<ul class="docs-pallete">
+  <li class="docs-swatch">
+    <div class="docs-color docs-color-black"></div>
+    <div class="docs-color-name">$black</div>
+  </li>
+</ul>
+
+<ul class="docs-pallete">
+  <li class="docs-swatch">
+    <div class="docs-color docs-color-gray-darker"></div>
+    <div class="docs-color-name">$gray-darker</div>
+  </li>
+  <li class="docs-swatch">
+    <div class="docs-color docs-color-gray-dark"></div>
+    <div class="docs-color-name">$gray-dark</div>
+  </li>
+  <li class="docs-swatch">
+    <div class="docs-color docs-color-gray"></div>
+    <div class="docs-color-name">$gray</div>
+  </li>
+  <li class="docs-swatch">
+    <div class="docs-color docs-color-gray-light"></div>
+    <div class="docs-color-name">$gray-light</div>
+  </li>
+  <li class="docs-swatch">
+    <div class="docs-color docs-color-gray-lighter"></div>
+    <div class="docs-color-name">$gray-lighter</div>
+  </li>
+</ul>
+
+<ul class="docs-pallete">
+  <li class="docs-swatch">
+    <div class="docs-color docs-color-red-darker"></div>
+    <div class="docs-color-name">$red</div>
+  </li>
+  <li class="docs-swatch">
+    <div class="docs-color docs-color-red-dark"></div>
+    <div class="docs-color-name">$red</div>
+  </li>
+  <li class="docs-swatch">
+    <div class="docs-color docs-color-red"></div>
+    <div class="docs-color-name">$red</div>
+  </li>
+  <li class="docs-swatch">
+    <div class="docs-color docs-color-red-light"></div>
+    <div class="docs-color-name">$red</div>
+  </li>
+  <li class="docs-swatch">
+    <div class="docs-color docs-color-red-lighter"></div>
+    <div class="docs-color-name">$red</div>
+  </li>
+</ul>
