--- a/assets/stylesheets/src/settings/_type.scss
+++ b/assets/stylesheets/src/settings/_type.scss
@@ -13,6 +13,7 @@ $font-size-root:        16px !default;
 $font-size-base:        1rem !default;
 
 // Sizing with a modular scale
+// @tool: http://modularscale.com/
 $type-scale-ratio:      $perfect-fourth !default;
 $type-scale-strands:    $font-size-base;
 
