--- a/docs/source/assets/stylesheets/src/docs.scss
+++ b/docs/source/assets/stylesheets/src/docs.scss
@@ -27,7 +27,6 @@ html {
 }
 
 body {
-  background: $docs-gray-lightest;
   font-family: "franklin-gothic-urw", $helvetica;
   padding-right: 2rem;
 }
@@ -140,3 +139,44 @@ main {
 
 // Content
 // ----------------------------------------------------------------------------
+
+// Settings
+// ----------------------------------------------------------------------------
+
+
+.docs-pallete {
+  @include row;
+  @extend .list-plain;
+  margin-top: $leading;
+}
+
+.docs-swatch {
+  @include columns(2);
+}
+
+.docs-color {
+  border-radius: $border-radius-base $border-radius-base 0 0;
+  height: u(120px, rem);
+  background: tomato;
+}
+
+.docs-color-name {
+  background: $gray-lighter;
+  font-size: $font-size-xs;
+  line-height: 3;
+  text-align: center;
+  border-top: 1px solid rgba(black, .05);
+  font-family: $mono;
+  border-radius: 0 0 $border-radius-base $border-radius-base;
+  color: gray;
+}
+
+.docs-color-black { background: $black; }
+
+.docs-color-gray-darker   { background: $gray-darker; }
+.docs-color-gray-dark     { background: $gray-dark; }
+.docs-color-gray          { background: $gray; }
+.docs-color-gray-light    { background: $gray-light; }
+.docs-color-gray-lighter  { background: $gray-lighter; }
+
+.docs-color-red  { background: $state-success-bg; }
