--- a/docs/source/index.html.erb
+++ b/docs/source/index.html.erb
@@ -2,16 +2,15 @@
 title: Plate
 ---
 
-# Colors
+<h1>Colors</h1>
 
-<ul class="docs-pallete">
+<p>Colors are split into two modes: the color palette and color abstractions.</p>
+
+<ul class="docs-pallete docs-pallete-grayscale">
   <li class="docs-swatch">
     <div class="docs-color docs-color-black"></div>
     <div class="docs-color-name">$black</div>
   </li>
-</ul>
-
-<ul class="docs-pallete">
   <li class="docs-swatch">
     <div class="docs-color docs-color-gray-darker"></div>
     <div class="docs-color-name">$gray-darker</div>
@@ -34,25 +33,31 @@ title: Plate
   </li>
 </ul>
 
-<ul class="docs-pallete">
-  <li class="docs-swatch">
-    <div class="docs-color docs-color-red-darker"></div>
-    <div class="docs-color-name">$red</div>
-  </li>
-  <li class="docs-swatch">
-    <div class="docs-color docs-color-red-dark"></div>
-    <div class="docs-color-name">$red</div>
-  </li>
+<ul class="docs-pallete docs-pallete-colors">
   <li class="docs-swatch">
     <div class="docs-color docs-color-red"></div>
     <div class="docs-color-name">$red</div>
   </li>
   <li class="docs-swatch">
-    <div class="docs-color docs-color-red-light"></div>
-    <div class="docs-color-name">$red</div>
+    <div class="docs-color docs-color-orange"></div>
+    <div class="docs-color-name">$orange</div>
   </li>
   <li class="docs-swatch">
-    <div class="docs-color docs-color-red-lighter"></div>
-    <div class="docs-color-name">$red</div>
+    <div class="docs-color docs-color-yellow"></div>
+    <div class="docs-color-name">$yellow</div>
+  </li>
+  <li class="docs-swatch">
+    <div class="docs-color docs-color-green"></div>
+    <div class="docs-color-name">$green</div>
+  </li>
+  <li class="docs-swatch">
+    <div class="docs-color docs-color-blue"></div>
+    <div class="docs-color-name">$blue</div>
+  </li>
+  <li class="docs-swatch">
+    <div class="docs-color docs-color-violet"></div>
+    <div class="docs-color-name">$violet</div>
   </li>
 </ul>
+
+<ul>
