--- a/assets/stylesheets/src/settings/_colors.scss
+++ b/assets/stylesheets/src/settings/_colors.scss
@@ -22,26 +22,25 @@ $green:                 hsl(158, 49%, 41%) !default;
 $blue:                  hsl(205, 83%, 42%) !default;
 $violet:                hsl(239, 35%, 56%) !default;
 
-// Abstractions
+// State colors
 $color-primary:         $blue !default;
 $color-success:         $green !default;
 $color-info:            $blue !default;
 $color-warning:         $orange !default;
 $color-danger:          $red !default;
 
-// State colors
-$state-success-text:    $color-success !default;
-$state-success-bg:      lighten($state-success-text, 20%) !default;
-$state-success-border:  darken($state-success-bg, 5%) !default;
+$color-success-text:    $color-success !default;
+$color-success-bg:      lighten($color-success-text, 20%) !default;
+$color-success-border:  darken($color-success-bg, 5%) !default;
 
-$state-info-text:       $color-info !default;
-$state-info-bg:         lighten($state-info-text, 20%) !default;
-$state-info-border:     darken($state-info-bg, 7%) !default;
+$color-info-text:       $color-info !default;
+$color-info-bg:         lighten($color-info-text, 20%) !default;
+$color-info-border:     darken($color-info-bg, 7%) !default;
 
-$state-warning-text:    $color-warning !default;
-$state-warning-bg:      lighten($state-warning-text, 20%) !default;
-$state-warning-border:  darken($state-warning-bg, 5%) !default;
+$color-warning-text:    $color-warning !default;
+$color-warning-bg:      lighten($color-warning-text, 20%) !default;
+$color-warning-border:  darken($color-warning-bg, 5%) !default;
 
-$state-danger-text:     $color-danger !default;
-$state-danger-bg:       lighten($state-danger-text, 20%) !default;
-$state-danger-border:   darken($state-danger-bg, 5%) !default;
+$color-danger-text:     $color-danger !default;
+$color-danger-bg:       lighten($color-danger-text, 20%) !default;
+$color-danger-border:   darken($color-danger-bg, 5%) !default;
