--- a/docs/source/index.html.erb
+++ b/docs/source/index.html.erb
@@ -6,7 +6,7 @@ title: Plate
 
 <p>Colors are split into two modes: the color palette and color abstractions.</p>
 
-<ul class="docs-pallete docs-pallete-grayscale">
+<ul class="docs-pallete">
   <li class="docs-swatch">
     <div class="docs-color docs-color-black"></div>
     <div class="docs-color-name">$black</div>
@@ -33,7 +33,7 @@ title: Plate
   </li>
 </ul>
 
-<ul class="docs-pallete docs-pallete-colors">
+<ul class="docs-pallete">
   <li class="docs-swatch">
     <div class="docs-color docs-color-red"></div>
     <div class="docs-color-name">$red</div>
@@ -60,4 +60,23 @@ title: Plate
   </li>
 </ul>
 
-<ul>
+<ul class="docs-pallete docs-pallete-states">
+  <li class="docs-swatch">
+    <div class="docs-color docs-color-default">default</div>
+  </li>
+  <li class="docs-swatch">
+    <div class="docs-color docs-color-primary">primary</div>
+  </li>
+  <li class="docs-swatch">
+    <div class="docs-color docs-color-success">success</div>
+  </li>
+  <li class="docs-swatch">
+    <div class="docs-color docs-color-info">info</div>
+  </li>
+  <li class="docs-swatch">
+    <div class="docs-color docs-color-warning">warning</div>
+  </li>
+  <li class="docs-swatch">
+    <div class="docs-color docs-color-danger">danger</div>
+  </li>
+</ul>
