--- a/assets/stylesheets/src/settings/_colors.scss
+++ b/assets/stylesheets/src/settings/_colors.scss
@@ -6,41 +6,60 @@
 // work without using an external graphics editing program.
 // @tool: http://rgb.to/
 
-// Grays
-$black:                 hsl(0, 0%, 10%) !default;
-$gray-darker:           hsl(0, 0%, 20%) !default;
-$gray-dark:             hsl(0, 0%, 40%) !default;
-$gray:                  hsl(0, 0%, 70%) !default;
-$gray-light:            hsl(0, 0%, 90%) !default;
-$gray-lighter:          hsl(0, 0%, 95%) !default;
+// Palette
+$black:                 hsl(  0,  0%,  10%) !default;
+$gray-darker:           hsl(  0,  0%,  20%) !default;
+$gray-dark:             hsl(  0,  0%,  40%) !default;
+$gray:                  hsl(  0,  0%,  70%) !default;
+$gray-light:            hsl(  0,  0%,  90%) !default;
+$gray-lighter:          hsl(  0,  0%,  95%) !default;
+$white:                 hsl(  0,  0%, 100%) !default;
 
-// Colors
-$red:                   hsl(  2, 67%, 54%) !default;
-$orange:                hsl( 23, 93%, 62%) !default;
-$yellow:                hsl( 42, 90%, 64%) !default;
-$green:                 hsl(158, 49%, 41%) !default;
-$blue:                  hsl(205, 83%, 42%) !default;
-$violet:                hsl(239, 35%, 56%) !default;
+$red:                   hsl(  2, 67%,  54%) !default;
+$red-light:             hsl(  2, 67%,  90%) !default;
+$red-lighter:           hsl(  2, 67%,  95%) !default;
 
-// State colors
+$orange:                hsl( 23, 93%,  62%) !default;
+$orange-light:          hsl( 23, 93%,  90%) !default;
+$orange-lighter:        hsl( 23, 93%,  95%) !default;
+
+$yellow:                hsl( 42, 90%,  64%) !default;
+$yellow-light:          hsl( 42, 90%,  90%) !default;
+$yellow-lighter:        hsl( 42, 90%,  95%) !default;
+
+$green:                 hsl(158, 49%,  41%) !default;
+$green-light:           hsl(158, 49%,  90%) !default;
+$green-lighter:         hsl(158, 49%,  95%) !default;
+
+$blue:                  hsl(205, 83%,  42%) !default;
+$blue-light:            hsl(205, 83%,  90%) !default;
+$blue-lighter:          hsl(205, 83%,  95%) !default;
+
+$violet:                hsl(239, 35%,  56%) !default;
+$violet-light:          hsl(239, 35%,  90%) !default;
+$violet-lighter:        hsl(239, 35%,  95%) !default;
+
+// Color abstractions
+$color-default:         $gray !default;
+$color-default-border:  $gray-light !default;
+$color-default-bg:      $gray-lighter !default;
+
 $color-primary:         $blue !default;
+$color-primary-border:  $blue-light !default;
+$color-primary-bg:      $blue-lighter !default;
+
 $color-success:         $green !default;
+$color-success-border:  $green-light !default;
+$color-success-bg:      $green-lighter !default;
+
 $color-info:            $blue !default;
+$color-info-border:     $blue-light !default;
+$color-info-bg:         $blue-lighter !default;
+
 $color-warning:         $orange !default;
+$color-warning-border:  $orange-light !default;
+$color-warning-bg:      $orange-lighter !default;
+
 $color-danger:          $red !default;
-
-$color-success-text:    $color-success !default;
-$color-success-bg:      lighten($color-success-text, 20%) !default;
-$color-success-border:  darken($color-success-bg, 5%) !default;
-
-$color-info-text:       $color-info !default;
-$color-info-bg:         lighten($color-info-text, 20%) !default;
-$color-info-border:     darken($color-info-bg, 7%) !default;
-
-$color-warning-text:    $color-warning !default;
-$color-warning-bg:      lighten($color-warning-text, 20%) !default;
-$color-warning-border:  darken($color-warning-bg, 5%) !default;
-
-$color-danger-text:     $color-danger !default;
-$color-danger-bg:       lighten($color-danger-text, 20%) !default;
-$color-danger-border:   darken($color-danger-bg, 5%) !default;
+$color-danger-border:   $red-light !default;
+$color-danger-bg:       $red-lighter !default;
