Move colors around

--- a/assets/stylesheets/src/settings/settings.scss
+++ b/assets/stylesheets/src/settings/settings.scss
@@ -27,7 +27,7 @@
 @import "breakpoints";
 @import "colors";
 @import "type";
-@import "style";
+@import "styles";
 @import "debug";
 @import "grid";
 @import "main";
