--- a/docs/source/index.html.erb
+++ b/docs/source/index.html.erb
@@ -4,7 +4,9 @@ title: Plate
 
 <h1>Colors</h1>
 
-<p>Colors are split into two modes: the color palette and color abstractions.</p>
+<p>The base color pallete is what all the other colors in the app are built
+from. They're set using the handy `hsl()` format, which allows you to tweak
+the colors as you work without using an external graphics editing program.</p>
 
 <ul class="docs-pallete">
   <li class="docs-swatch">
@@ -62,21 +64,19 @@ title: Plate
 
 <ul class="docs-pallete docs-pallete-states">
   <li class="docs-swatch">
-    <div class="docs-color docs-color-default">default</div>
-  </li>
-  <li class="docs-swatch">
-    <div class="docs-color docs-color-primary">primary</div>
+    <div class="docs-color docs-color-info">info</div>
+    <div class="docs-color-name">info colors</div>
   </li>
   <li class="docs-swatch">
     <div class="docs-color docs-color-success">success</div>
-  </li>
-  <li class="docs-swatch">
-    <div class="docs-color docs-color-info">info</div>
+    <div class="docs-color-name">soccess colors</div>
   </li>
   <li class="docs-swatch">
     <div class="docs-color docs-color-warning">warning</div>
+    <div class="docs-color-name">warning colors</div>
   </li>
   <li class="docs-swatch">
     <div class="docs-color docs-color-danger">danger</div>
+    <div class="docs-color-name">danger-colors</div>
   </li>
 </ul>
