--- a/assets/stylesheets/src/settings/_colors.scss
+++ b/assets/stylesheets/src/settings/_colors.scss
@@ -6,7 +6,7 @@
 // work without using an external graphics editing program.
 // @tool: http://rgb.to/
 
-// Palette
+// Grays
 $black:                 hsl(  0,  0%,  10%) !default;
 $gray-darker:           hsl(  0,  0%,  20%) !default;
 $gray-dark:             hsl(  0,  0%,  40%) !default;
@@ -15,6 +15,7 @@ $gray-light:            hsl(  0,  0%,  90%) !default;
 $gray-lighter:          hsl(  0,  0%,  95%) !default;
 $white:                 hsl(  0,  0%, 100%) !default;
 
+// Colors
 $red:                   hsl(  2, 67%,  54%) !default;
 $red-light:             hsl(  2, 67%,  90%) !default;
 $red-lighter:           hsl(  2, 67%,  95%) !default;
@@ -39,27 +40,5 @@ $violet:                hsl(239, 35%,  56%) !default;
 $violet-light:          hsl(239, 35%,  90%) !default;
 $violet-lighter:        hsl(239, 35%,  95%) !default;
 
-// Color abstractions
-$color-default:         $gray !default;
-$color-default-border:  $gray-light !default;
-$color-default-bg:      $gray-lighter !default;
-
+// Abstractions
 $color-primary:         $blue !default;
-$color-primary-border:  $blue-light !default;
-$color-primary-bg:      $blue-lighter !default;
-
-$color-success:         $green !default;
-$color-success-border:  $green-light !default;
-$color-success-bg:      $green-lighter !default;
-
-$color-info:            $blue !default;
-$color-info-border:     $blue-light !default;
-$color-info-bg:         $blue-lighter !default;
-
-$color-warning:         $orange !default;
-$color-warning-border:  $orange-light !default;
-$color-warning-bg:      $orange-lighter !default;
-
-$color-danger:          $red !default;
-$color-danger-border:   $red-light !default;
-$color-danger-bg:       $red-lighter !default;
