--- a/assets/stylesheets/src/base/_fancies.scss
+++ b/assets/stylesheets/src/base/_fancies.scss
@@ -3,34 +3,59 @@
 // ============================================================================
 
 // Fancy bits and bobs for your type
-// @browser-support: http://caniuse.com/font-feature
-// @source: http://blog.fontdeck.com/post/15777165734/opentype-1
+// https://www.typotheque.com/articles/opentype_features_in_web_browsers_-_tests
+
+// The OpenType feature tag value is always a string of 4 ASCII characters. If
+// it has more or less characters, the whole property is invalid. The value is
+// an positive integer. The two keywords on and off are synonyms for 1 and 0
+// respectively. If no value is set, the default is 1. For non-Boolean
+// OpenType features (e.g. stylistic alternates), the value implies a
+// particular glyph to be selected; for Boolean values, it is a switch.
+// @source: https://developer.mozilla.org/en-US/docs/Web/CSS/font-feature-settings
 
 // Numbers
 // ----------------------------------------------------------------------------
 
 // Enable automatic fractions
 %fractions {
-  @include font-feature-settings(frac);
+  font-feature-settings: "frac";
 }
 
 // Consistent height numbers
 %lining-numerals {
-  @include font-feature-settings(lnum kern);
+  font-feature-settings: "lnum", "kern";
 }
 
 // Ascending and descending numbers
 %oldstyle-numerals {
-  @include font-feature-settings(onum kern);
+  font-feature-settings: "onum", "kern";
 }
 
 // Enable tabular (monospaced) figures
 %tabular {
-  @include font-feature-settings(tnum);
+  font-feature-settings: "tnum";
 }
 
 // Caps
 // ----------------------------------------------------------------------------
+
+// Small caps using alternate glyphs
+%small-caps {
+  font-feature-settings: "smcp", "kern";
+  letter-spacing: $caps-spacing;
+}
+
+// Convert both upper and lowercase to small caps (affects punctuation also)
+%small-caps-all {
+  font-feature-settings: "c2sc", "smcp";
+  letter-spacing: $caps-spacing;
+}
+
+// All uppercase letters
+%upper {
+  letter-spacing: $caps-spacing;
+  text-transform: uppercase;
+}
 
 // Make the first letter of a paragraph grand
 .drop-cap {
@@ -54,59 +79,41 @@ p + .drop-cap {
   text-indent: 0;
 }
 
-// Real small caps
-%small-caps {
-  @include font-feature-settings(smcp kern);
-  letter-spacing: $caps-spacing;
-}
-
-// Convert both upper and lowercase to small caps (affects punctuation also)
-%small-caps-all {
-  @include font-feature-settings(c2sc, smcp);
-  letter-spacing: $caps-spacing;
-}
-
-// All uppercase letters
-%upper {
-  letter-spacing: $caps-spacing;
-  text-transform: uppercase;
-}
-
 // Fancy bits
 // ----------------------------------------------------------------------------
 
 // Enable historical forms
 %historical {
-  @include font-feature-settings(hist);
+  font-feature-settings: "hist";
 }
 
 %hyphens {
-  @include hyphens(none);
+  hyphens: none;
 }
 
 // Enable ligatures
 %ligatures {
-  @include font-feature-settings(liga);
+  font-feature-settings: "liga";
 }
 
 // Disable common ligatures, usually on by default
 %no-ligatures {
-  @include font-feature-settings(liga, 0);
+  font-feature-settings: "liga" off;
 }
 
 // Use the second available swash character
 %swash {
-  @include font-feature-settings(swsh);
+  font-feature-settings: "swsh";
 }
 
 // Punctuation
 // ----------------------------------------------------------------------------
 
-// Hyphens
+// Disable hyphens on certain elements
 // @source: http://meyerweb.com/eric/thoughts/2012/12/17/where-to-avoid-css-hyphenation
 abbr, acronym, blockquote,
 code, dir, kbd,
 listing, plaintext, q,
 samp, tt, var, xmp {
-  @include hyphens(none);
+  hyphens: none;
 }
