--- a/assets/stylesheets/src/base/_forms.scss
+++ b/assets/stylesheets/src/base/_forms.scss
@@ -35,12 +35,11 @@ $form-horiz-label-width:        12em;
 
   // Set the border and box shadow on specific inputs to match
   .control {
-    @include box-shadow(inset 0 1px 1px rgba(0,0,0,.075)); // Redeclare so transitions work
+    box-shadow: inset 0 1px 1px rgba(black, .075); // Redeclare so transitions work
     border-color: $border-color;
 
     &:focus {
-      $shadow: inset 0 1px 1px rgba(0,0,0,.075), 0 0 6px lighten($border-color, 20%);
-      @include box-shadow($shadow);
+      box-shadow: inset 0 1px 1px rgba(black, .075) 0 0 6px lighten($border-color, 20%);
       border-color: darken($border-color, 10%);
     }
   }
@@ -97,7 +96,6 @@ label {
 
 .control {
   @include placeholder();
-  @include transition(border-color $easing-base $timing-base);
   background-color: $input-bg;
   background-image: none;
   border-radius: $input-border-radius;
@@ -108,6 +106,7 @@ label {
   height: u($input-height, rem);
   margin: 0;
   padding: $padding-vert-base $padding-horiz-base;
+  transition: border-color $easing-base $timing-base;
 
   &:focus {
     border-color: $input-border-focus;
@@ -272,7 +271,7 @@ input[type="checkbox"], {
 
 input[type="search"] {
   -webkit-appearance: none;
-  @include box-sizing(border-box);
+  box-sizing: border-box;
 }
 
 // File
