--- a/assets/stylesheets/src/base/_headings.scss
+++ b/assets/stylesheets/src/base/_headings.scss
@@ -3,9 +3,9 @@
 // ============================================================================
 
 h1, h2, h3, h4, h5, h6 {
-  @include font-feature-settings(dlig liga lnum kern);
   color: $black;
   font-family: inherit;
+  font-feature-settings: "dlig", "liga", "lnum", "kern";
   font-weight: $font-weight-bold;
   margin: $leading 0;
   text-rendering: optimizeLegibility;
