--- a/assets/stylesheets/src/base/_images.scss
+++ b/assets/stylesheets/src/base/_images.scss
@@ -30,13 +30,11 @@ figure {
 }
 
 .img-thumbnail {
-  @include transition(all .2s ease-in-out);
+  @include img-responsive(inline-block); // keep them at most 100% wide
+  transition: all .2s ease-in-out;
   background-color: $body-bg;
   border-radius: $border-radius-base;
   border: 1px solid $border-color-base;
   line-height: $line-height-base;
   padding: 4px;
-
-  // Keep them at most 100% wide
-  @include img-responsive(inline-block);
 }
