--- a/assets/stylesheets/src/base/_main.scss
+++ b/assets/stylesheets/src/base/_main.scss
@@ -2,7 +2,23 @@
 // Main
 // ============================================================================
 
-// Main is the base HTML structure all web pages will have.
+// "Main" is the base HTML structure all web pages will have.
+
+// Set box-sizing globally to handle padding and border widths
+// @source: http://www.paulirish.com/2012/box-sizing-border-box-ftw/
+*,
+*:before,
+*:after {
+  @include box-sizing(border-box);
+}
+
+// Text selection color
+// Remove text-shadow in selection highlight: h5bp.com/i
+// These selection rule sets have to be separate.
+::selection {
+  background: $color-primary;
+  text-shadow: none;
+}
 
 html {
   -webkit-tap-highlight-color: rgba(0,0,0,0); // disable mobile Safari tap highlight
@@ -18,33 +34,12 @@ html {
 
 body {
   @include font-smoothing();
-  @include hyphens(auto);
   background-color: $body-bg;
   color: $text-color;
-  line-height: $line-height-base;
   font-family: $font-family-base;
   font-size: $font-size-base;
+  hyphens: auto;
+  line-height: $line-height-base;
   font-style: normal;
   font-weight: $font-weight-normal;
-}
-
-// Set box-sizing globally to handle padding and border widths
-// @source: http://www.paulirish.com/2012/box-sizing-border-box-ftw/
-// *,
-// *:before,
-// *:after {
-//   @include box-sizing(border-box);
-// }
-
-// Text selection color
-// Remove text-shadow in selection highlight: h5bp.com/i
-// These selection rule sets have to be separate.
-::selection {
-  background: $color-primary;
-  text-shadow: none;
-}
-
-::-moz-selection {
-  background: $color-primary;
-  text-shadow: none;
 }
