--- a/assets/stylesheets/src/settings/lib/neat/grid/_visual-grid.scss
+++ b/assets/stylesheets/src/settings/lib/neat/grid/_visual-grid.scss
@@ -32,7 +32,7 @@
 
     @each $breakpoint in $visual-grid-breakpoints {
       @if $breakpoint != nil {
-        @include breakpoint($breakpoint) {
+        @include media($breakpoint) {
           @include grid-column-gradient(gradient-stops($grid-columns));
         }
       }
