--- a/assets/stylesheets/src/settings/settings.scss
+++ b/assets/stylesheets/src/settings/settings.scss
@@ -11,8 +11,8 @@
 // should begin with an underscore.
 
 // Libraries
-@import "lib/bourbon/bourbon";       // v3.2.0.beta.2
-@import "lib/neat/neat";             // v1.6.0.pre
+@import "lib/bourbon/bourbon";       // v4.0.0-rc.2
+@import "lib/neat/neat";             // v1.6.0
 
 // Functions
 @import "functions/absolute-unit";
