Default to rounding line height

--- a/assets/stylesheets/src/settings/functions/_min-lines-for.scss
+++ b/assets/stylesheets/src/settings/functions/_min-lines-for.scss
@@ -4,6 +4,7 @@
 
 // Calculate the minimum number of rhythm units needed to contain the font-size.
 $min-line-padding: 2px;
+$round-to-half-line: true;
 
 @function min-lines-for($font-size) {
   $font-size: strip-unit($font-size);
