--- a/assets/stylesheets/src/base/_lists.scss
+++ b/assets/stylesheets/src/base/_lists.scss
@@ -13,7 +13,7 @@ $dl-offset-horizontal:      12em;
 // ----------------------------------------------------------------------------
 
 ul, ol {
-  @include margin(0 0 1);
+  margin: 0 0 $leading;
 
   ul, ol {
     margin-bottom: 0;
@@ -84,7 +84,7 @@ ul, ol {
 // ----------------------------------------------------------------------------
 
 dl {
-  @include margin(0 0 1);
+  margin: 0 0 $leading;
 }
 
 dt, dd {
