--- a/assets/stylesheets/src/base/_paragraphs.scss
+++ b/assets/stylesheets/src/base/_paragraphs.scss
@@ -14,15 +14,15 @@ Paragraphs are for content
 
 // OpenType ligatures and oldstyle figures enabled if available.
 p {
-  @include margin(0 0 1);
   font-feature-settings: "kern", "onum", "liga";
+  margin-bottom: $leading;
   word-break: break-all;
   word-break: break-word; // Non standard for webkit
 
   // Indent subsequent paragraphs
   @if $indented-paragraphs {
     + p {
-      @include margin-top(-1);
+      margin-top: $leading * -1;
       text-indent: 2em;
     }
   }
