More default border style colors

--- a/assets/stylesheets/src/settings/_style.scss
+++ b/assets/stylesheets/src/settings/_style.scss
@@ -21,6 +21,8 @@ $border-radius-sm:          1px !default;
 
 // Borders
 $border-color-base:         $gray-lighter;
+$border-color-dark:         $gray-light;
+$border-color-darker:       $gray;
 $border-width-base:         2px !default;
 $border-width-sm:           1px !default;
 $border-width-lg:           4px !default;
