--- a/assets/stylesheets/src/settings/_colors.scss
+++ b/assets/stylesheets/src/settings/_colors.scss
@@ -4,7 +4,7 @@
 
 // It's nice to use HSL in your CSS to make it easy to tweak the colors as you
 // work without using an external graphics editing program.
-// @tool: http://rgb.to/
+// @source: http://rgb.to/
 
 // Grays
 $black:                 hsl(  0,  0%,  10%) !default;
