--- a/assets/stylesheets/src/base/_fonts.scss
+++ b/assets/stylesheets/src/base/_fonts.scss
@@ -3,3 +3,5 @@
 // ============================================================================
 
 // Import your custom fonts here
+
+// @include font-face($font-family, $file-path, $weight: normal, $style: normal, $asset-pipeline: false );
