--- a/assets/styles/src/settings/settings.scss
+++ b/assets/styles/src/settings/settings.scss
@@ -13,6 +13,7 @@
 // Libraries
 @import "lib/bourbon/bourbon";
 @import "lib/neat/neat";
+@import "lib/animate/animate";
 
 // Functions
 @import "functions/absolute-unit";
