--- a/assets/styles/src/settings/lib/bourbon/_bourbon.scss
+++ b/assets/styles/src/settings/lib/bourbon/_bourbon.scss
@@ -1,4 +1,4 @@
-// Bourbon v4.0.0-rc.2
+// Bourbon v4.0.1
 
 // Settings
 @import "settings/prefixer";
@@ -47,6 +47,7 @@
 @import "css3/filter";
 @import "css3/flex-box";
 @import "css3/font-face";
+@import "css3/font-feature-settings";
 @import "css3/hyphens";
 @import "css3/hidpi-media-query";
 @import "css3/image-rendering";
