Switch out gulp for grunt

--- a/assets/styles/source/settings/settings.scss
+++ b/assets/styles/source/settings/settings.scss
@@ -32,7 +32,6 @@
 @import "debug";
 
 // Mixins
-@import "mixins/breakpoint";
 @import "mixins/debug";
 @import "mixins/font-size";
 @import "mixins/font-smoothing";
@@ -40,7 +39,7 @@
 @import "mixins/img-responsive";
 @import "mixins/leading";
 @import "mixins/leading-borders";
+@import "mixins/media-aliases";
 @import "mixins/tab-focus";
-@import "mixins/text-hide";
 @import "mixins/text-overflow";
 @import "mixins/visual-baseline";
