--- a/assets/stylesheets/source/shared/_base.scss
+++ b/assets/stylesheets/source/shared/_base.scss
@@ -11,14 +11,7 @@
 *:before,
 *:after {
   box-sizing: border-box;
-}
-
-// Text selection color
-// Remove text-shadow in selection highlight: h5bp.com/i
-// These selection rule sets have to be separate.
-::selection {
-  background: $color-primary;
-  text-shadow: none;
+  overflow: hidden;
 }
 
 html {
