Add triangle mixin, fix weights

--- a/assets/stylesheets/source/settings/settings.scss
+++ b/assets/stylesheets/source/settings/settings.scss
@@ -36,4 +36,5 @@
 @import "mixins/media-aliases";
 @import "mixins/tab-focus";
 @import "mixins/text-overflow";
+@import "mixins/triangles";
 @import "mixins/visual-baseline";
