Add link color mixin

--- a/assets/stylesheets/source/settings/settings.scss
+++ b/assets/stylesheets/source/settings/settings.scss
@@ -33,6 +33,7 @@
 @import "mixins/img-responsive";
 @import "mixins/leading";
 @import "mixins/leading-borders";
+@import "mixins/link-color";
 @import "mixins/media-aliases";
 @import "mixins/tab-focus";
 @import "mixins/text-overflow";
