--- a/assets/stylesheets/src/settings/_theme.scss
+++ b/assets/stylesheets/src/settings/_theme.scss
@@ -15,15 +15,18 @@ $easing-base:               ease-in-out !default;
 $body-bg:                   white !default;
 
 // Border-radius
-$border-radius-base:        2px !default;
-$border-radius-lg:          4px !default;
-$border-radius-sm:          1px !default;
+$border-radius-base:        3px !default;
+$border-radius-lg:          6px !default;
+$border-radius-sm:          2px !default;
 
 // Borders
 $border-color-base:         $gray-lighter;
 $border-width-base:         2px !default;
 $border-width-sm:           1px !default;
 $border-width-lg:           4px !default;
+
+// Box shadow
+$box-shadow-base:           1px 1px 6px rgba(black, 0.15);
 
 // Color states
 $color-info:                $gray-dark !default;
