Add fonts stylesheet

--- a/assets/stylesheets/src/application.scss
+++ b/assets/stylesheets/src/application.scss
@@ -26,6 +26,7 @@
 @import "shared/normalize";
 @import "shared/helpers";
 @import "shared/base";
+@import "shared/fonts";
 @import "shared/type";
 
 // Buttons
