Switch to node bourbon and neat

--- a/assets/stylesheets/src/settings/settings.scss
+++ b/assets/stylesheets/src/settings/settings.scss
@@ -6,8 +6,8 @@
 @import "global";
 
 // Libraries
-@import "lib/bourbon/bourbon";
-@import "lib/neat/neat";
+@import "bourbon";
+@import "neat";
 
 // Functions
 @import "functions/convert-unit";
