--- a/assets/stylesheets/src/shared/_type.scss
+++ b/assets/stylesheets/src/shared/_type.scss
@@ -244,7 +244,7 @@ abbr {
 
 // Inline and block code styles
 code, kbd, pre, samp {
-  font-family: $mono;
+  font-family: $font-family-mono;
   font-size: 90%;
 }
 
