Add omega-reset mixin

--- a/assets/stylesheets/src/settings/settings.scss
+++ b/assets/stylesheets/src/settings/settings.scss
@@ -35,6 +35,7 @@
 @import "mixins/leading-borders";
 @import "mixins/link-color";
 @import "mixins/media-aliases";
+@import "mixins/omega-reset";
 @import "mixins/tab-focus";
 @import "mixins/text-overflow";
 @import "mixins/triangles";
