--- a/assets/stylesheets/src/settings/mixins/_omega-reset.scss
+++ b/assets/stylesheets/src/settings/mixins/_omega-reset.scss
@@ -4,6 +4,11 @@
 // ============================================================================
 
 @mixin omega-reset($nth) {
-  &:nth-child(#{$nth}) { margin-right: flex-gutter($grid-columns, $gutter); }
-  &:nth-child(#{$nth}+1) { clear: none }
+  &:nth-child(#{$nth}) {
+    margin-right: flex-gutter($grid-columns);
+  }
+
+  &:nth-child(#{$nth}+1) {
+    clear: none;
+  }
 }
